tests/invalid/max_wrong_arg_count/main.py
def run_case() -> None:
    x: int = max(1)

if __name__ == "__main__":
    run_case()
